--- a/Modul 5-DHT/platformio.ini
+++ b/Modul 5-DHT/platformio.ini
@@ -16,5 +16,6 @@ framework = arduino
 lib_deps =
     adafruit/DHT sensor library@^1.4.1
     adafruit/Adafruit Unified Sensor @ ^1.1.4
-    
+    winlinvip/SimpleDHT @^1.0.14
+
 monitor_speed = 115200
